# DistributedFileSystem

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.sh
accounting/: models.py  services.py
agent/: metrics_collector.py
app/: app.py  config.py
app/api/: cluster.py  health.py
app/models/: cluster_model.py
app/services/: cluster_service.py
app/utils/: docker_utils.py  validators.py
controller/: Dockerfile  anomaly_detector.py  config_validation.py  database.py  main.py  models.py  monitoring.py  services.py
database/: init.sql
monitoring/: grafana-dashboard.json
monitoring/grafana-provisioning/dashboards/: dashboards.yml
monitoring/grafana-provisioning/datasources/: postgres.yml
scripts/: example.sh  start.sh
storage_node/: Dockerfile  __init__.py  agent.py
tests/: conftest.py  test_app.py  test_controller.py  test_e2e.py  test_file.txt  test_helpers.py  test_models.py  test_storage_agent.py
